Coinitialize bug fixed

--- a/templates/mycalc/main.html
+++ b/templates/mycalc/main.html
@@ -278,7 +278,7 @@
                                 </div>
                                 <a href="" name="B_Calc_Norm" class="get_result_calc">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img1" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -315,7 +315,7 @@
                                 </div>
                                 <a href="" name="B_Calc_T" class="get_result_calc">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img2" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -343,7 +343,7 @@
                                 </div>
                                 <a href="" name="B_Calc_MaxT" class="get_result_calc">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img3" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -371,7 +371,7 @@
                                 </div>
                                 <a href="" name="B_Calc_Cond" class="get_result_calc">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img4" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -432,7 +432,7 @@
                                 </div>
                                 <a href="" name="B_Calc_Permerz" class="get_result_calc">Расчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img5" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -501,7 +501,7 @@
                                     <input class="default-btn get_result_calc" type="submit" value="Расчитать"/>
                                 </div>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img6" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Wired Mat 80.jpg' %}" alt=""/>
                                 </div>
@@ -561,7 +561,7 @@
 
 
                         <div class="results__bot">
-                            <a class="default-btn" download href="/media/Ведомость.xlsx" >Сформировать итоговую ведомость</a>
+                            <a class="default-btn" download href="/media/Statement.xlsx" >Сформировать итоговую ведомость</a>
                             <a class="" href=""></a></div>
                         </div>
 
@@ -608,7 +608,7 @@
                     <div class="second_filter">
                         <div class="section">
                             <div class="section-top">
-                                <div class="section-top__el" ><span>Секция 2</span></div>
+                                <div class="section-top__el" ><span>Секция 1</span></div>
                             </div>
 
 
@@ -851,7 +851,7 @@
                                     </div>
                                     <a href="" class="get_result_calc_plosk" name="B_P_Calc_Norm">Рассчитать</a>
                                 </div>
-                                <div class="isolation-gallery">
+                                <div style="float: right" class="isolation-gallery">
                                     <div class="isolation-gallery__img">
                                         <img id="paste-img7" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                     </div>
@@ -899,7 +899,7 @@
                                     </div>
                                     <a href="" name="B_P_Calc_MaxT" class="get_result_calc_plosk">Рассчитать</a>
                                 </div>
-                                <div class="isolation-gallery">
+                                <div style="float: right" class="isolation-gallery">
                                     <div class="isolation-gallery__img">
                                         <img id="paste-img8" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                     </div>
@@ -962,7 +962,7 @@
                                     </div>
                                     <a href="" class="get_result_calc_plosk" name="B_P_Calc_Cond">Рассчитать</a>
                                 </div>
-                                <div class="isolation-gallery">
+                                <div style="float: right" class="isolation-gallery">
                                     <div class="isolation-gallery__img">
                                         <img id="paste-img9" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                     </div>
@@ -1034,7 +1034,7 @@
                                         <input class="default-btn get_result_calc_plosk" type="submit" value="Расчитать"/>
                                     </div>
                                 </div>
-                                <div class="isolation-gallery">
+                                <div style="float: right" class="isolation-gallery">
                                     <div class="isolation-gallery__img">
                                         <img id="paste-img10" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                     </div>
@@ -1094,7 +1094,7 @@
 
 
                             <div class="results__bot">
-                                <a class="default-btn" download href="/media/Ведомость.xlsx">Сформировать итоговую ведомость</a>
+                                <a class="default-btn" download href="/media/Statement.xlsx">Сформировать итоговую ведомость</a>
                                 <a class="" href=""></a>
                             </div>
                         </div>
@@ -1142,7 +1142,7 @@
                     <div class="third_filter">
                         <div class="section">
                             <div class="section-top">
-                                <div class="section-top__el"><span>Секция 3</span></div>
+                                <div class="section-top__el"><span>Секция 1</span></div>
                             </div>
                             <div class="section-bot">
                                 <div class="section-label">Название</div>
@@ -1359,7 +1359,7 @@
 
                                 <a href="" name="B_E_Calc_Norm" class="get_result_calc_emk">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img11" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt="" />
                                 </div>
@@ -1431,7 +1431,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img12" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                 </div>
@@ -1482,7 +1482,7 @@
                                 </div>
                                 <a href="" name="B_E_Calc_MaxT" class="get_result_calc_emk">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img13" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                 </div>
@@ -1543,7 +1543,7 @@
                                 </div>
                                 <a href="" name="B_E_Calc_Cond" class="get_result_calc_emk">Рассчитать</a>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img14" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                 </div>
@@ -1611,7 +1611,7 @@
                                     <input class="default-btn get_result_calc_emk" type="submit" value="Расчитать"/>
                                 </div>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img15" class="my-img" src="{% static 'mycalc/img/photos/PAROC Pro Slab 40.jpg' %}" alt=""/>
                                 </div>
@@ -1670,7 +1670,7 @@
 
 
                         <div class="results__bot">
-                            <a class="default-btn" download href="/media/Ведомость.xlsx">Сформировать итоговую ведомость</a>
+                            <a class="default-btn" download href="/media/Statement.xlsx">Сформировать итоговую ведомость</a>
                             <a class="" href=""></a>
                         </div>
                     </div>
@@ -1929,7 +1929,7 @@
                                     <input class="default-btn" type="submit" value="Расчитать"/>
                                 </div>
                             </div>
-                            <div class="isolation-gallery">
+                            <div style="float: right" class="isolation-gallery">
                                 <div class="isolation-gallery__img">
                                     <img id="paste-img16" class="my-img" src="" alt=""/>
                                 </div>
@@ -1969,7 +1969,7 @@
                             </div>
                         </div>
                         <div class="results__bot">
-                            <a class="default-btn" download href="/media/Ведомость.xlsx">Сформировать итоговую ведомость</a>
+                            <a class="default-btn" download href="/media/Statement.xlsx">Сформировать итоговую ведомость</a>
                             <a class="" href=""></a>
                         </div>
                     </div>
@@ -2697,14 +2697,12 @@
                                     $('#ex-emk-surface-temperature').show(); //3
                                     $('#ex-emk-heat-loss-SP').show(); //4
                                     $('#ex-emk-estimated-heat-loss').show(); //5
-                                    $('#ex-emk-total-estimated-heat-loss').show();
 
                                     $('#ex-total-recommended-thickness').show(); //1
                                     $('#ex-total-permissible-temperature').show();  //2
                                     $('#ex-total-surface-temperature').show(); //3
                                     $('#ex-total-heat-loss-SP').show(); //4
                                     $('#ex-total-estimated-heat-loss').show(); //5
-                                    $('#ex-total-total-estimated-heat-loss').show();
                                 }
                                 if (data['macro-name'] === 'Emk_Calc_T') {
                                     $('#ex-emk-recommended-thickness').show(); //1
@@ -3013,6 +3011,8 @@
 <style>
     .my-img{
         border: solid 2px;
+        height: 180px;
+        width: 180px;
     }
 
     .clear_tab{
@@ -3022,7 +3022,7 @@
         padding:10px 20px;
         border:1px solid transparent;
         transition:border-color .3s ease;
-        cursor:pointer
+        cursor:pointer;
     }
 </style>
 
